tests/expectations/parser/program/mapping_fail.out
Error [EPAR0370005]: expected '}', '@', 'record', 'async', 'function', 'inline', 'mapping', 'storage', 'script', 'transition' -- found 'mappin'
    --> test:3:5
     |
   3 |     mappin balances: address => u128;
     |     ^^^^^^
